# django-apprunner

./: .gitignore  README.md  apprunner.yaml  manage.py  pyproject.toml  requirements.txt  startup.sh
erp_backend/: asgi.py  urls.py  wsgi.py
erp_backend/apps/nomenclators/cod_currency/: admin.py  apps.py
erp_backend/apps/nomenclators/cod_currency/models/: __init__.py  currency_models.py
erp_backend/apps/nomenclators/cod_currency/serializers/: __init__.py  currency_serializer.py
erp_backend/apps/nomenclators/cod_currency/views/: __init__.py  currency_view.py
erp_backend/config/: develop.py  development.py
erp_backend/urls/: __init__.py  versioned_urls.py
myproject/: requirements.txt  settings.py
